tdf#107965: partially revert fix for tdf#91312

This commit partially reverts 8a11d34c7e08218b5ff9da4870c460297f312332.

tdf#91312 is not reproducible after the revert because the
conditional format logic has changed since then and now
conditions are grouped.

Change-Id: I5ae86c8c3b8611e3fdfed6adbcac7b481bc7217f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152273
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>